--- a/projects/ccd-case-ui-toolkit/src/lib/components/header/header-bar/header-bar.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/components/header/header-bar/header-bar.html
@@ -26,7 +26,7 @@
 
         <div class="proposition-right">
           <span id="user-name">{{username}}</span>
-          <a (click)="signOut()" id="sign-out" href="javascript:void(0)">{{'Sign Out' | rpxTranslate}}</a>
+          <button type="button" class="govuk-js-link" (click)="signOut()" id="sign-out">{{'Sign Out' | rpxTranslate}}</button>
         </div>
       </div>
     </div>
