--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/case-viewer/case-basic-access-view/case-basic-access-view.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/case-viewer/case-basic-access-view/case-basic-access-view.component.html
@@ -39,7 +39,7 @@
   </button>
   <div class="govuk-grid-column-full govuk-!-padding-left-0">
     <p>
-      <a class="govuk-body" (click)="onCancel()" href="javascript:void(0)">
+      <a class="govuk-body" (click)="onCancel(); $event.preventDefault()" href="#">
         {{'Cancel' | rpxTranslate}}
       </a>
     </p>
