--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-file-view/components/case-file-view-folder-selector/case-file-view-folder-selector.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-file-view/components/case-file-view-folder-selector/case-file-view-folder-selector.component.html
@@ -8,7 +8,7 @@
 </div>
 <div class="govuk-button-group">
     <button class="button button-primary" type="button" (click)="save()">Save</button>
-    <a (click)="cancel()" class="cancel" href="javascript:void(0)">Cancel</a>
+    <a (click)="cancel(); $event.preventDefault()" class="cancel" href="#">Cancel</a>
 </div>
 
 <ng-template #folder let-cat="cat" let-level="level">
