--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/document/read-document-field.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/document/read-document-field.html
@@ -1,4 +1,4 @@
-<a *ngIf="caseField.value" href="javascript:void(0)"
+<button type="button" *ngIf="caseField.value" class="govuk-js-link"
    (click)="showMediaViewer()">
   {{ caseField.value.document_filename }}
-</a>
+</button>
