--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/linked-cases/components/no-linked-cases/no-linked-cases.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/linked-cases/components/no-linked-cases/no-linked-cases.component.html
@@ -9,7 +9,7 @@
       <p class="govuk-body">There are no cases linked to this one.</p>
     </ng-template>
     <p class="govuk-body">
-      <a class="govuk-link" href="javascript:void(0)" (click)="onBack()">Go back to the Linked cases tab</a>
+      <button type="button" class="govuk-js-link" (click)="onBack()">Go back to the Linked cases tab</button>
     </p>
     <div class="govuk-button-group">
       <button class="button button-primary" type="button" id="back-button" (click)="onBack()">Back</button>
