--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/linked-cases/read-linked-cases-field.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/linked-cases/read-linked-cases-field.component.html
@@ -29,7 +29,7 @@
   <div class="govuk-main-wrapper">
     <p class="govuk-body">{{serverLinkedApiError.message}}</p>
     <span class="govuk-body align-left">
-      <a href="javascript:void(0)" (click)="reloadCurrentRoute()" id="reload-linked-cases-tab" class="govuk-link">Reload
+      <a href="#" (click)="reloadCurrentRoute(); $event.preventDefault()" id="reload-linked-cases-tab" class="govuk-link">Reload
         the Linked cases tab</a>
     </span>
   </div>
@@ -38,7 +38,7 @@
   <div class="govuk-main-wrapper">
     <p class="govuk-body">{{serverError.message}}</p>
     <span class="govuk-body align-left">
-      <a href="javascript:void(0)" (click)="reloadCurrentRoute()" id="reload-linked-cases-tab" class="govuk-link">Reload
+      <a href="#" (click)="reloadCurrentRoute(); $event.preventDefault()" id="reload-linked-cases-tab" class="govuk-link">Reload
         the Linked cases tab</a>
     </span>
   </div>
