--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-flag/components/case-flag-summary-list/case-flag-summary-list.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-flag/components/case-flag-summary-list/case-flag-summary-list.component.html
@@ -7,8 +7,8 @@
       {{flagForSummaryDisplay.partyName || caseFlagCheckYourAnswersPageStep.CASE_LEVEL_LOCATION }}
     </dd>
     <dd class="govuk-summary-list__actions">
-      <a class="govuk-link" href="javascript:void(0)"
-        (click)="changeButtonEmitter.emit(this.summaryListDisplayMode === displayMode.MANAGE ? caseFlagFieldState.FLAG_MANAGE_CASE_FLAGS : caseFlagFieldState.FLAG_LOCATION)">
+      <a class="govuk-link" href="#"
+        (click)="changeButtonEmitter.emit(this.summaryListDisplayMode === displayMode.MANAGE ? caseFlagFieldState.FLAG_MANAGE_CASE_FLAGS : caseFlagFieldState.FLAG_LOCATION); $event.preventDefault()">
         {{'Change' | rpxTranslate}}<span class="govuk-visually-hidden"> {{'party name' | rpxTranslate}}</span>
       </a>
     </dd>
@@ -21,8 +21,8 @@
       {{flagDescription}}
     </dd>
     <dd class="govuk-summary-list__actions">
-      <a class="govuk-link" href="javascript:void(0)"
-        (click)="changeButtonEmitter.emit(this.summaryListDisplayMode === displayMode.MANAGE ? caseFlagFieldState.FLAG_UPDATE : caseFlagFieldState.FLAG_TYPE)">
+      <a class="govuk-link" href="#"
+        (click)="changeButtonEmitter.emit(this.summaryListDisplayMode === displayMode.MANAGE ? caseFlagFieldState.FLAG_UPDATE : caseFlagFieldState.FLAG_TYPE); $event.preventDefault()">
         {{'Change' | rpxTranslate}}<span class="govuk-visually-hidden"> {{'flag type' | rpxTranslate}}</span>
       </a>
     </dd>
@@ -35,8 +35,8 @@
       {{flagDescriptionWelsh}}
     </dd>
     <dd class="govuk-summary-list__actions">
-      <a class="govuk-link" href="javascript:void(0)"
-        (click)="changeButtonEmitter.emit(this.summaryListDisplayMode === displayMode.MANAGE ? caseFlagFieldState.FLAG_UPDATE_WELSH_TRANSLATION : caseFlagFieldState.FLAG_TYPE)">
+      <a class="govuk-link" href="#"
+        (click)="changeButtonEmitter.emit(this.summaryListDisplayMode === displayMode.MANAGE ? caseFlagFieldState.FLAG_UPDATE_WELSH_TRANSLATION : caseFlagFieldState.FLAG_TYPE); $event.preventDefault()">
         {{'Change' | rpxTranslate}}<span class="govuk-visually-hidden"> {{'other description (Welsh)' | rpxTranslate}}</span>
       </a>
     </dd>
@@ -49,8 +49,8 @@
       {{externalUserUpdate ? flagUpdateComments : flagComments}}
     </dd>
     <dd class="govuk-summary-list__actions">
-      <a class="govuk-link" href="javascript:void(0)"
-        (click)="changeButtonEmitter.emit(this.summaryListDisplayMode === displayMode.MANAGE ? caseFlagFieldState.FLAG_UPDATE : caseFlagFieldState.FLAG_COMMENTS)">
+      <a class="govuk-link" href="#"
+        (click)="changeButtonEmitter.emit(this.summaryListDisplayMode === displayMode.MANAGE ? caseFlagFieldState.FLAG_UPDATE : caseFlagFieldState.FLAG_COMMENTS); $event.preventDefault()">
         {{'Change' | rpxTranslate}}<span class="govuk-visually-hidden"> {{'comments' | rpxTranslate}}</span>
       </a>
     </dd>
@@ -63,8 +63,8 @@
       {{flagCommentsWelsh}}
     </dd>
     <dd class="govuk-summary-list__actions">
-      <a class="govuk-link" href="javascript:void(0)"
-        (click)="changeButtonEmitter.emit(this.summaryListDisplayMode === displayMode.MANAGE ? caseFlagFieldState.FLAG_UPDATE_WELSH_TRANSLATION : caseFlagFieldState.FLAG_COMMENTS)">
+      <a class="govuk-link" href="#"
+        (click)="changeButtonEmitter.emit(this.summaryListDisplayMode === displayMode.MANAGE ? caseFlagFieldState.FLAG_UPDATE_WELSH_TRANSLATION : caseFlagFieldState.FLAG_COMMENTS); $event.preventDefault()">
         {{'Change' | rpxTranslate}}<span class="govuk-visually-hidden"> {{'comments (Welsh)' | rpxTranslate}}</span>
       </a>
     </dd>
@@ -77,8 +77,8 @@
       {{flagStatus | rpxTranslate}}
     </dd>
     <dd class="govuk-summary-list__actions">
-      <a *ngIf="is2Point1Enabled" class="govuk-link" href="javascript:void(0)"
-        (click)="changeButtonEmitter.emit(this.summaryListDisplayMode === displayMode.MANAGE ? caseFlagFieldState.FLAG_UPDATE : caseFlagFieldState.FLAG_STATUS)">
+      <a *ngIf="is2Point1Enabled" class="govuk-link" href="#"
+        (click)="changeButtonEmitter.emit(this.summaryListDisplayMode === displayMode.MANAGE ? caseFlagFieldState.FLAG_UPDATE : caseFlagFieldState.FLAG_STATUS); $event.preventDefault()">
         {{'Change' | rpxTranslate}}<span class="govuk-visually-hidden"> {{'status' | rpxTranslate}}</span>
       </a>
     </dd>
