--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/linked-cases/components/linked-cases-table/linked-cases-from-table.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/linked-cases/components/linked-cases-table/linked-cases-from-table.component.html
@@ -1,5 +1,5 @@
-<a *ngIf="!noLinkedCases && !isServerError" id="show-hide-link" class="govuk-link" href="javascript:void(0)"
-  (click)="onClick()">{{showHideLinkText}}</a>
+<button type="button" *ngIf="!noLinkedCases && !isServerError" id="show-hide-link" class="govuk-js-link"
+  (click)="onClick()">{{showHideLinkText}}</button>
 <table *ngIf="(getLinkedCasesResponse && showHideLinkText === 'Hide') || noLinkedCases"
   aria-describedby="table to display cases linked from">
   <thead class="govuk-table__head">
