Refactor approach to translations for qualifying questions (#1977)
* Refactor approach to translations for qualifying questions

* Update qualifying-question-detail.component.html

* toolkit version update

* Update yarn-audit-known-issues

* toolkit version update

* udpated version number to v7.2.36

---------

Co-authored-by: Chris Jones <christopher.jones@hmcts.net>

--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/components/qualifying-questions/qualifying-question-detail/qualifying-question-detail.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/components/qualifying-questions/qualifying-question-detail/qualifying-question-detail.component.html
@@ -2,9 +2,9 @@
   <h1 class="govuk-heading-l">
     {{ qualifyingQuestion.name | rpxTranslate }}
   </h1>
-  <div class="qm-qualifying-question">
-    <ccd-markdown
-    [content]="qualifyingQuestion.markdown | rpxTranslate">
-  </ccd-markdown>
-  </div>
-</ng-container>
+  <ng-container *translatedMarkdown="qualifyingQuestion; let content;">
+    <div class="qm-qualifying-question">
+      <ccd-markdown [content]="qualifyingQuestion ? content : (qualifyingQuestion.markdown | rpxTranslate)"></ccd-markdown>
+    </div>
+  </ng-container>
+ </ng-container>
