--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-file-view/case-file-view-field.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-file-view/case-file-view-field.component.html
@@ -52,6 +52,7 @@
           [height]="'94.5vh'"
           [caseId]="caseId"
           [multimediaPlayerEnabled]="true"
+          [enableICP]="isIcpEnabled()"
         >
         </mv-media-viewer>
       </ng-container>
