--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/collection/write-collection-field.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/collection/write-collection-field.html
@@ -8,7 +8,7 @@
     <button class="button write-collection-add-item__top" type="button" (click)="addItem(true)" [disabled]="isNotAuthorisedToCreate() || isSearchFilter()">{{'Add new' | rpxTranslate}}</button>
     <h2 class="heading-h2 error-spacing" *ngIf="caseField.hint_text || formArray.errors">
       <span *ngIf="caseField.hint_text" class="form-hint">
-      <ccd-markdown [content]="caseField.hint_text"></ccd-markdown>
+      <ccd-markdown [content]="caseField.hint_text | rpxTranslate"></ccd-markdown>
       </span>
       <span *ngIf="formArray.errors" class="error-message">
         {{(formArray.errors | ccdFirstError:caseField.label)}}
