--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/case-editor/case-event-completion/components/case-event-completion-task-cancelled/case-event-completion-task-cancelled.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/case-editor/case-event-completion/components/case-event-completion-task-cancelled/case-event-completion-task-cancelled.html
@@ -23,7 +23,7 @@
       <button class="govuk-button govuk-!-margin-right-2" data-module="govuk-button" (click)="onContinue()">
         {{'Continue' | rpxTranslate}}
       </button>
-      <a [routerLink]="['/', 'cases', 'case-details', jurisdiction, caseType, caseId, 'tasks']"
+      <a [routerLink]="['/', 'cases', 'case-details', caseId, 'tasks']"
               class="govuk-button govuk-button--secondary" data-module="govuk-button">
         {{'Cancel' | rpxTranslate}}
       </a>
