--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/linked-cases/components/linked-cases-table/linked-cases-from-table.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/linked-cases/components/linked-cases-table/linked-cases-from-table.component.html
@@ -14,7 +14,7 @@
   <tbody class="govuk-table__body" *ngIf="getLinkedCasesResponse && (!isServerError && !isServerReasonCodeError)">
     <tr class="govuk-table__row" *ngFor="let case of getLinkedCasesResponse">
       <td class="govuk-table__header case-table-column width-20">
-        <p class="govuk-body"><a target="_blank" class="govuk-link" href="cases/case-details/{{ case.ccdJurisdiction }}/{{ case.ccdCaseType }}/{{case.caseReference}}"
+        <p class="govuk-body"><a target="_blank" class="govuk-link" href="cases/case-details/{{case.caseReference}}"
             rel="noopener"><span>{{case.caseNameHmctsInternal}} <br>
               {{case.caseReference | ccdCaseReference}}</span></a></p>
       </td>
@@ -24,7 +24,7 @@
       <td class="case-table-column" *ngFor="let details of case.linkDetails">
         <span *ngFor="let reason of details.reasons; let i = index; let isLast = last">
           {{reason | ccdLinkCasesFromReasonValue}}<span><a class="govuk-!-padding-left-1"
-            href="cases/case-details/{{ case.ccdJurisdiction }}/{{ case.ccdCaseType }}/{{ case.caseReference }}"
+            href="cases/case-details/{{ case.caseReference }}"
             *ngIf="hasLeadCaseOrConsolidated(reason.reasonCode)">{{getCaseReferenceLink(case.caseReference)}}</a></span>
         <br *ngIf="!isLast" />
         </span>
