--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/search-result/search-result.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/search-result/search-result.component.html
@@ -44,7 +44,7 @@
           </div>
         </div>
       </th>
-      <th *ngIf="activityEnabled" class="activity-column"></th>
+      <th *ngIf="activityEnabled" class="activity-column" id="activity-column="></th>
     </tr>
   </thead>
 
