revert the change

--- a/projects/ccd-case-ui-toolkit/src/lib/components/form/date-input/date-input.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/components/form/date-input/date-input.html
@@ -56,9 +56,7 @@
            class="form-control"
            [id]="hourId()"
            [name]="hourId()"
-           type="text"
-           pattern="[0-9]*"
-           inputmode="numeric"
+           type="number"
            [attr.aria-labelledby]="'hour-label-'+ hourId()"
            [value]="displayHour"
            (input)="hourChange(hourInput.value)"
@@ -73,9 +71,7 @@
            class="form-control"
            [id]="minuteId()"
            [name]="minuteId()"
-           type="text"
-           pattern="[0-9]*"
-           inputmode="numeric"
+           type="number"
            [attr.aria-labelledby]="'minute-label-'+ minuteId()"
            [value]="displayMinute"
            (input)="minuteChange(minuteInput.value)"
@@ -90,9 +86,7 @@
            class="form-control"
            [id]="secondId()"
            [name]="secondId()"
-           type="text"
-           pattern="[0-9]*"
-           inputmode="numeric"
+           type="number"
            [attr.aria-labelledby]="'second-label-'+ secondId()"
            [value]="displaySecond"
            (input)="secondChange(secondInput.value)"
