--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/datetime-picker/datetime-picker.component.scss
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/datetime-picker/datetime-picker.component.scss
@@ -63,7 +63,7 @@ Details inside it are for the actual component first shown on page */
     }
   }
 
-  .mat-icon-button {
+  .mat-mdc-icon-button {
     height: 32px;
     width: 32px;
 
@@ -121,8 +121,8 @@ Details inside it are for the actual component first shown on page */
       border-radius: 0px;
       top: -20px;
       width: 200%;
-
-      .mat-button-wrapper {
+      /* TODO(mdc-migration): Done The following rule targets internal classes of button that may no longer apply for the MDC version. */
+      .mdc-button__label {
         text-align: center;
         font-weight: bold;
       }
@@ -171,8 +171,8 @@ Details inside it are for the actual component first shown on page */
         left: -2px;
       }
     }
-
-    .mat-button-wrapper {
+    /* TODO(mdc-migration): Done The following rule targets internal classes of button that may no longer apply for the MDC version. */
+    .mdc-button__label {
       text-transform: capitalize !important;
     }
 
@@ -364,9 +364,9 @@ Details inside it are for the actual component first shown on page */
           tr {
 
             mdc-icon-button mat-mdc-icon-button mat-unthemed mat-mdc-button-base
-            .mat-icon-button {
-
-              .mat-button-wrapper {
+            .mat-mdc-icon-button {
+              /* TODO(mdc-migration): Done The following rule targets internal classes of button that may no longer apply for the MDC version. */
+              .mat-mdc-button-label {
                 width: auto;
                 height: auto;
               }
@@ -392,7 +392,7 @@ Details inside it are for the actual component first shown on page */
                 }
 
                 &:nth-child(3) {
-                  [aria-label="expand_less icon"].mat-icon-button {
+                  [aria-label="expand_less icon"].mat-mdc-icon-button {
                     position: absolute;
                     left: 82px !important;
                     top: 25px;
@@ -400,7 +400,7 @@ Details inside it are for the actual component first shown on page */
                 }
 
                 &:nth-child(5) {
-                  [aria-label="expand_less icon"].mat-icon-button {
+                  [aria-label="expand_less icon"].mat-mdc-icon-button {
                     position: absolute;
                     left: 169px !important;
                     top: 25px;
@@ -408,13 +408,13 @@ Details inside it are for the actual component first shown on page */
                 }
 
                 &:nth-last-child(1) {
-                  [aria-label="expand_less icon"].mat-icon-button {
+                  [aria-label="expand_less icon"].mat-mdc-icon-button {
                     left: 153px !important;
                   }
                 }
 
                 &:nth-last-child(2) {
-                  [aria-label="expand_less icon"].mat-icon-button {
+                  [aria-label="expand_less icon"].mat-mdc-icon-button {
                     left: 65px !important;
                   }
                 }
@@ -431,10 +431,10 @@ Details inside it are for the actual component first shown on page */
                 text-align: right;
 
                 &:first-child {
-                  .mat-form-field {
+                  .mat-mdc-form-field {
                     width: 50px;
                   }
-                  .mat-form-field::before {
+                  .mat-mdc-form-field::before {
                     color: black;
                     content: "Hours";
                     position: relative;
@@ -445,7 +445,7 @@ Details inside it are for the actual component first shown on page */
                 }
 
                 &:nth-child(3) {
-                  .mat-form-field::before {
+                  .mat-mdc-form-field::before {
                     color: black;
                     content: "Minutes";
                     position: relative;
@@ -463,7 +463,7 @@ Details inside it are for the actual component first shown on page */
                 display: none;
               }
               td:nth-of-type(5) {
-                .mat-form-field::before {
+                .mat-mdc-form-field::before {
                   color: black;
                   content: "Seconds";
                   position: relative;
@@ -474,7 +474,7 @@ Details inside it are for the actual component first shown on page */
               .meridian {
                 border-bottom: none;
 
-                .mat-button {
+                .mat-mdc-button {
                   height: 30px;
                   top: 21px;
                   border-radius: 0;
@@ -483,10 +483,9 @@ Details inside it are for the actual component first shown on page */
                   background-color: #dee0e2;
                   display: flex;
                   justify-content: center;
-
-                  .mat-button-wrapper {
-                    position: relative;
-                    top: -2px;
+                  /* TODO(mdc-migration): Done The following rule targets internal classes of button that may no longer apply for the MDC version. */
+                  .mat-mdc-button {
+                    padding-top: 2px;
                   }
                 }
               }
@@ -525,7 +524,7 @@ Details inside it are for the actual component first shown on page */
                 }
 
                 &:nth-child(3) {
-                  [aria-label="expand_more icon"].mat-icon-button {
+                  [aria-label="expand_more icon"].mat-mdc-icon-button {
                     position: absolute;
                     left: 82px !important;
                     top: 15px;
@@ -533,7 +532,7 @@ Details inside it are for the actual component first shown on page */
                 }
 
                 &:nth-child(5) {
-                  [aria-label="expand_more icon"].mat-icon-button {
+                  [aria-label="expand_more icon"].mat-mdc-icon-button {
                     position: absolute;
                     top: 15px;
                     left: 169px;
@@ -541,13 +540,13 @@ Details inside it are for the actual component first shown on page */
                 }
 
                 &:nth-last-child(1) {
-                  [aria-label="expand_more icon"].mat-icon-button {
+                  [aria-label="expand_more icon"].mat-mdc-icon-button {
                     left: 65px !important;
                   }
                 }
 
                 &:nth-last-child(1).ng-star-inserted {
-                  [aria-label="expand_more icon"].mat-icon-button {
+                  [aria-label="expand_more icon"].mat-mdc-icon-button {
                     left: 153px !important;
                   }
                 }
@@ -569,40 +568,42 @@ Details inside it are for the actual component first shown on page */
               visibility: hidden;
               display: none;
             }
-
-
-            .mat-button-wrapper {
+            /* TODO(mdc-migration): Done The following rule targets internal classes of button that may no longer apply for the MDC version. */
+            .mat-mdc-icon-button .mat-mdc-button-label {
               display: block;
               width: 15px;
               height: 8px;
             }
-
-            .mat-form-field-wrapper {
+            /* TODO(mdc-migration): Done The following rule targets internal classes of form-field that may no longer apply for the MDC version. */
+            .mat-mdc-form-field .mat-mdc-text-field-wrapper {
               padding-bottom: 0;
             }
 
-            .mat-form-field {
+            .mat-mdc-form-field {
               width: auto;
               max-width: none;
             }
 
-            [aria-label="expand_less icon"].mat-icon-button {
-              .mat-button-wrapper::after {
+            [aria-label="expand_less icon"].mat-mdc-icon-button {
+              /* TODO(mdc-migration): Done The following rule targets internal classes of button that may no longer apply for the MDC version. */
+              .mat-mdc-button-label::after {
                 content: ' \25B2';
               }
             }
 
 
-            [aria-label="expand_more icon"].mat-icon-button {
-              .mat-button-wrapper::after {
-                content: '\25BC';
+            [aria-label="expand_more icon"].mat-mdc-icon-button {
+              /* TODO(mdc-migration): Done The following rule targets internal classes of button that may no longer apply for the MDC version. */
+              .mat-mdc-button-label::after {
+                content: ' \25B2';
               }
             }
-
-            .mat-form-field-flex {
+            /* TODO(mdc-migration): Done The following rule targets internal classes of form-field that may no longer apply for the MDC version. */
+            /* TODO(mdc-migration): Done The following rule targets internal classes of form-field that may no longer apply for the MDC version. */
+            .mat-mdc-form-field-flex {
               width: 100%;
-
-              .mat-form-field-infix {
+              /* TODO(mdc-migration): Done The following rule targets internal classes of form-field that may no longer apply for the MDC version. */
+              .mat-mdc-form-field-infix {
                 border: 1px solid black;
                 height: 20px;
                 width: 37px;
@@ -611,9 +612,9 @@ Details inside it are for the actual component first shown on page */
                 align-items: center;
               }
             }
-
-            .mat-form-field-underline {
-              visibility: hidden;
+            /* TODO(mdc-migration): Done The following rule targets internal classes of form-field that may no longer apply for the MDC version. */
+            .mat-mdc-form-field .mat-mdc-text-field-wrapper .mdc-line-ripple {
+              display: none;
             }
 
             input {
@@ -635,7 +636,7 @@ Details inside it are for the actual component first shown on page */
       margin-top: 20px;
       justify-content: flex-start;
 
-      .mat-button {
+      .mat-mdc-button {
         @include mat-button-style;
 
         &:focus {
@@ -649,10 +650,10 @@ Details inside it are for the actual component first shown on page */
         .mat-icon {
           visibility: hidden;
         }
-
-        .mat-button-wrapper::before {
-          color: white;
+        /* TODO(mdc-migration): Done The following rule targets internal classes of button that may no longer apply for the MDC version. */
+        .mdc-button__label::before {
           content: 'Confirm';
+          color: white;
           position: relative;
           font-size: 15px;
           left: -3px;
