--- a/storybook/style/_material.scss
+++ b/storybook/style/_material.scss
@@ -1,21 +1,26 @@
 $outlineColor: #bfc1c3;
 
-.mat-tab-header {
+.mat-mdc-tab-header {
     border-bottom: 0;
 }
 
-.mat-tab-body-wrapper {
+/* TODO(mdc-migration): Done The following rule targets internal classes of tabs that may no longer apply for the MDC version. */
+.mat-mdc-tab-body-wrapper {
     border-top: 1px solid $outlineColor;
     margin-top: -1px;
 }
 
-.mat-tab-label, .mat-tab-link {
+/* TODO(mdc-migration): Done The following rule targets internal classes of tabs that may no longer apply for the MDC version. */
+.mat-mdc-tab, .mat-mdc-tab-link {
     font-family: "GDS Transport", Arial, sans-serif;
     -webkit-font-smoothing: antialiased;
     font-size: 16px;
 }
 
-.mat-tab-label {
+/* TODO(mdc-migration): Done The following rule targets internal classes of tabs that may no longer apply for the MDC version. */
+/* TODO(mdc-migration): Done The following rule targets internal classes of tabs that may no longer apply for the MDC version. */
+/* TODO(mdc-migration): Done The following rule targets internal classes of tabs that may no longer apply for the MDC version. */
+.mat-mdc-tab {
     min-width: 80px !important;
     height: 42px !important;
     margin: 0 4px 7px 4px;
@@ -28,26 +33,27 @@ $outlineColor: #bfc1c3;
         border-top: 3px solid #ffdd00;
         border-bottom: 4px solid #000;
     }
-
-    &.mat-tab-label-active {    
-        height: 48px !important;   
-        border-top: 1px solid $outlineColor;  
-        border-bottom: 0; 
-        border-left: 1px solid $outlineColor;   
-        border-right: 1px solid $outlineColor;   
+    /* TODO(mdc-migration): Done The following rule targets internal classes of tabs that may no longer apply for the MDC version. */
+    /* TODO(mdc-migration): Done The following rule targets internal classes of tabs that may no longer apply for the MDC version. */
+    &[aria-selected="true"] {
+        height: 48px !important;
+        border-top: 1px solid $outlineColor;
+        border-bottom: 0;
+        border-left: 1px solid $outlineColor;
+        border-right: 1px solid $outlineColor;
         background: #fff;
         margin: 1px 4px 0 4px;
         &.cdk-focused {
             border-top: 3px solid #ffdd00;
             border-bottom: 4px solid #000;
         }
-
-        .mat-tab-label-content {
-            opacity: 1;
+        /* TODO(mdc-migration): Done The following rule targets internal classes of tabs that may no longer apply for the MDC version. */
+        .mdc-tab__text-label {
+          opacity: 1;
         }
     }
 }
 
-.mat-tab-group.mat-primary .mat-ink-bar, .mat-tab-nav-bar.mat-primary .mat-ink-bar{
+.mat-mdc-tab-group.mat-primary .mat-ink-bar, .mat-mdc-tab-nav-bar.mat-primary .mat-ink-bar{
     height: 0px;
-} 
+}
