--- a/storybook/style/app.scss
+++ b/storybook/style/app.scss
@@ -60,6 +60,7 @@ main {
   padding-right: 210px;
 }
 
+/* TODO(mdc-migration): The following rule targets internal classes of autocomplete that may no longer apply for the MDC version.*/
 .mat-autocomplete-panel-extend {
   max-height: 470px!important;
 }
@@ -111,6 +112,7 @@ table.form-table {
 }
 
 .dialog {
+  /* TODO(mdc-migration): The following rule targets internal classes of dialog that may no longer apply for the MDC version.*/
   mat-dialog-container {
     padding: 0;
     background: #cecccc;
