--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/address/write-address-field.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/address/write-address-field.html
@@ -18,12 +18,15 @@
       </label>
       <span class="error-message" *ngIf="noAddressSelected">{{errorMessage | rpxTranslate}}</span>
       <select class="form-control ccd-dropdown addressList" [id]="createElementId('addressList')" name="address" [formControl]="addressList" (change)="addressSelected()" focusElement>
-        <option *ngFor="let addressOption of addressOptions" [ngValue]="addressOption.value">
-          {{addressOption.description | rpxTranslate}}
+        <option *ngIf="addressOptions.length === 0" [ngValue]="undefined">
+          {{'No address found' | rpxTranslate}}
         </option>
-         <!-- <option *ngFor="let addressOption of addressOptions; let i = index" [ngValue]="addressOption.value">
-          {{i === 0 ? (addressOption.description | rpxTranslate) : addressOption.description}}
-        </option> -->
+        <option *ngIf="addressOptions.length > 0" [ngValue]="undefined">
+          {{addressOptions.length}} {{(addressOptions.length === 1 ? 'address found' : 'addresses found') | rpxTranslate}}
+        </option>
+        <option *ngFor="let addressOption of addressOptions" [ngValue]="addressOption.value">
+          {{addressOption.description}}
+        </option>
       </select>
     </div>
 
