--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/activity/activity-banner/activity-banner.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/activity/activity-banner/activity-banner.component.html
@@ -1,4 +1,4 @@
-<div class="activity-banner" [ngClass]="{caseLocked: bannerType === 'editor'}">
+<div [ngClass]="{caseLocked: bannerType === 'editor', someoneViewing: bannerType === 'viewer'}">
   <div class="bannerIcon"><img alt="{{description | rpxTranslate}}" class="img-responsive" src="{{imageLink}}" /></div>
   <div class="bannerText">{{description | rpxTranslate}}</div>
 </div>
