--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/activity/activity-banner/activity-banner.component.scss
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/activity/activity-banner/activity-banner.component.scss
@@ -1,31 +1,40 @@
-.activity-banner {
-  margin-top: 4px;
-  height: 40px;
-  background-color: #912b88;
-  &.case-locked {
+.caseLocked {
+    margin-top: 4px;
+    height: 40px;
+    -webkit-filter: blur(0);
+    filter: blur(0);
     background-color: #e72626;
-  }
+}
 
-  .banner-icon {
+.someoneViewing {
+    margin-top: 4px;
+    height: 40px;
+    -webkit-filter: blur(0);
+    filter: blur(0);
+    background-color: #912b88;
+}
+
+.bannerIcon{
     float: left;
     color: #FFFFFF;
     padding-left: 9px;
     position: relative;
     top: 50%;
     transform: translateY(-40%);
-  }
+}
 
-  .banner-text {
+.bannerText {
     padding-left: 40px;
     position: relative;
     top: 50%;
     transform: translateY(-50%);
     height: 20px;
+    -webkit-filter: blur(0);
+    filter: blur(0);
     font-family: "nta", Arial, sans-serif;
     font-size: 16px;
     font-weight: bold;
     line-height: 1.25;
     text-align: left;
     color: #ffffff;
-  }
 }
