--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/components/query-details/query-details.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/components/query-details/query-details.component.html
@@ -15,7 +15,7 @@
       </tr>
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header">{{ 'Submission date' | rpxTranslate }}</th>
-        <td class="govuk-table__cell">{{ query.createdOn | date: 'dd MMMM YYYY HH:mm' }}</td>
+        <td class="govuk-table__cell">{{ query.createdOn | date: 'dd MMMM yyyy HH:mm' }}</td>
       </tr>
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header">{{ 'Query subject' | rpxTranslate }}</th>
@@ -59,7 +59,7 @@
           <tbody class="govuk-table__body">
           <tr class="govuk-table__row">
             <th scope="row" class="govuk-table__header">{{ 'Last response date' | rpxTranslate }}</th>
-            <td class="govuk-table__cell">{{ child.createdOn | date: 'dd MMMM YYYY HH:mm'  }}</td>
+            <td class="govuk-table__cell">{{ child.createdOn | date: 'dd MMMM yyyy HH:mm'  }}</td>
           </tr>
 
             <tr *ngIf="isInternalUser()" class="govuk-table__row">
@@ -96,7 +96,7 @@
           <tbody class="govuk-table__body">
           <tr class="govuk-table__row">
             <th scope="row" class="govuk-table__header">{{ 'Last submission date' | rpxTranslate }}</th>
-            <td class="govuk-table__cell">{{ child.createdOn | date: 'dd MMMM YYYY HH:mm'}}</td>
+            <td class="govuk-table__cell">{{ child.createdOn | date: 'dd MMMM yyyy HH:mm'}}</td>
           </tr>
 
           <tr class="govuk-table__row">
