--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/components/query-list/query-list.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/components/query-list/query-list.component.html
@@ -22,8 +22,8 @@
         <a href="javascript:void(0)" (click)="showDetails(message)">{{ message.subject }}</a>
       </td>
       <td class="govuk-table__cell query-list__cell">{{ message.lastSubmittedBy }}</td>
-      <td class="govuk-table__cell query-list__cell">{{ message.lastSubmittedDate | date: 'dd MMM YYYY HH:mm' }} </td>
-      <td class="govuk-table__cell query-list__cell">{{ message.lastResponseDate | date: 'dd MMM YYYY HH:mm' }} </td>
+      <td class="govuk-table__cell query-list__cell">{{ message.lastSubmittedDate | date: 'dd MMM yyyy HH:mm' }} </td>
+      <td class="govuk-table__cell query-list__cell">{{ message.lastResponseDate | date: 'dd MMM yyyy HH:mm' }} </td>
       <td class="govuk-table__cell query-list__cell">{{ message.responseStatus | rpxTranslate }}</td>
     </tr>
     </tbody>
