--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/address/write-address-field.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/address/write-address-field.html
@@ -30,7 +30,7 @@
       </select>
     </div>
 
-    <a class="manual-link bottom-30" *ngIf="!shouldShowDetailFields()" (click)="blankAddress()" href="javascript:void(0)">
+    <a class="manual-link bottom-30" *ngIf="!shouldShowDetailFields()" (click)="blankAddress(); $event.preventDefault()" href="#">
       {{"I can't enter a UK postcode" | rpxTranslate}}
     </a>
   </div>
