Add payment history message

--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/payment/case-payment-history-viewer-field.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/payment/case-payment-history-viewer-field.html
@@ -1,3 +1,6 @@
+<cut-alert type="information">
+    <ng-container >{{ 'Recent payments may take a few minutes to reflect here.' | rpxTranslate }}</ng-container>
+</cut-alert>
 <ccpay-payment-lib
     [API_ROOT]="getBaseURL()"
     [CCD_CASE_NUMBER]="caseReference"
