icon column change

--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/activity/activity-icon/activity-icon.component.scss
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/activity/activity-icon/activity-icon.component.scss
@@ -14,7 +14,7 @@
     padding: 5px 0px;
     position: absolute;
     z-index: 1;
-    margin-left: -50px;
+    /*margin-left: -50px;*/
     transition: opacity 1s;
   }
 
